--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: evently_app
+name: Eveno
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -58,8 +58,10 @@ dependencies:
   image_picker: ^1.0.7
   flutter_local_notifications: ^19.2.1
   timezone: ^0.10.0
-  pdf: ^3.10.4
-  printing: ^5.0.4
+#  pdf: ^3.10.4
+#  printing: ^5.0.4
+  pdf: ^3.8.0
+  printing: ^5.13.5
   firebase_messaging: ^15.2.5
 
 dev_dependencies:
